--- a/0314_dmclass.ipynb
+++ b/0314_dmclass.ipynb
@@ -679,8 +679,43 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 이상치\n",
+    "* 측정 오류나 잘못된 입력으로 인해 이상치 발생 가능\n",
+    "* 기존 데이터로부터 멀리 떨어진, 통상 평균으로부터 표준편차의 세 배가 넘는 범위의 데이터\n",
+    "* 통계 기법으로 이상치의 후보를 찾고 최종 이상치 판정은 실무자들이 하는 것이 바람적\n",
+    "* 변수별 값들을 내림차순으로 정렬하고 이들 중 가장 크거나 작은 수치들을 이상치로 판정, 군집 분석을 이용해 다른 데이터들과 일정거리 이상 떨어진 데이터를 이상치로 판정\n",
+    "* 이상치의 개수가 매우 적은 경우에는 결측치로 판정 가능"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 결측치\n",
+    "* 변수가 많은 경우, 결측치를 단순 삭제하면 결측치가 데이터에서 차지하는 비율이 낮더라도 많은 관측치에 영향을 미칠 수 있음\n",
+    "* 결측치가 있는 관측치를 삭제하기보다 기존 데이터를 이용해 대체할 수 있음\n",
+    "* 간단한 결측치 대체값ㅇㄴ 평균, 중앙값 등, 좀 더 정교한 대체값은 회귀 분석을 이용\n",
+    "* 데이터가 충분히 많을 경우, 복잡한 결측치 처리법보다는 간단한 방법 선호\n",
+    "* 이 경우에는 변수의 중요도를 측정하여 해당 변수가 예측에 미치는 영향력이 미미하다면 그 변수를 삭제하고 그렇지 않다면 결측치가 적게 존재하는 변수의 정보를 이용해 결측치를 대체하는 것이 좋음\n",
+    "* 정말 중요한 변수의 결측치를 해결하는 근본적인 방법은 실제값을 얻는 것"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
