--- a/0314_dmclass.ipynb
+++ b/0314_dmclass.ipynb
@@ -1492,16 +1492,224 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# 0320_데이터마이닝\n",
     "## 2주차 강의록"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 예측력과 과적합\n",
+    "#### 과적합\n",
+    "* 모델은 반응 변수와 예측 변수 간의 상관관계를 잘 설명하고 미래 값을 정확히 예측해야 함\n",
+    "* 현재 데이터를 잘 설명하는 것도 중요하지만 더 중요한것은 미래  값에 대한 정확한 예측\n",
+    "* 현재 데이터에 '과하게 적합' 된 것을 '과적합' 이라 함\n",
+    "* 현 데이터의 성능만 고려해 불필요하게 포함된 변수들은 과적합을 유발할 수 있음\n",
+    "* 관측치 수가 변수 개수보다 적을 경우 엉뚱한 관계가 모델에 반영될 수 있어 학습 데이터가 충분하지 안흘 경우에는 간단한 함수로 표현된 모델이 더 좋은 성능을 보일 때가 많음\n",
+    "* 가장 성능이 좋은 모델을 선택하는 괒어에서 너무 많은 모델을 사용할 때도 과적합이 발생할 수 있음"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 데이터 분할\n",
+    "#### 모델의 성능이 좋은 경우\n",
+    "* 선택한 모델의 우수성\n",
+    "* 선택한 모델이 현재 사용된 데이터에 (우연히) 잘 맞음 -> 심각한 문제 초래\n",
+    "\n",
+    "#### 데이터를 학습 데이터, 검증 데이터, 테스트 데이터로 나누어 모델 검증\n",
+    "* 학습(훈련. training) : 모델 구축 시 사용. 여러 모델을 비교할 경우 동일한 학습 데이터를 사용\n",
+    "* 검증(validation) 데이터 : 학습 데이터로부터 구축된 여러 모델의 성능을 비교할 때 사용. 몇몇 알고리즘(의사결정 트리, k-최근접 이웃)에서는 검증 데이터를 이용해 모델의 하이퍼 파라미터를 결정하기도 함\n",
+    "* 테스트(평가, 시험, testing) 데이터 : 구축된 모델이 향후 수집될 새로운 데이터에 대해 얼마만큼 예측/분류 성능을 보일지 평가할 때 쓰임"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 모델 구축 -> 모델 평가 -> 모델 재평가(선택) -> 최종 모델을 사용한 예측/분류"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 데이터 분할\n",
+    "# 웨스트 록스베리 데이터를 학습/검증/시험 데이터로 분할"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# random_state는 코드를 다시 실행할 때 동일한 파티션을 얻기 위해 정의된 값으로 설정\n",
+    "# 훈련 60% 검증 40%\n",
+    "trainData = housing_df.sample(frac = 0.6, random_state = 1)\n",
+    "\n",
+    "# 훈련 세트에 아직 없는 행을 검증에 할당\n",
+    "validData = housing_df.drop(trainData.index)\n",
+    "\n",
+    "print('Training : ', trainData.shape)\n",
+    "print('Validation : ', validData.shape)\n",
+    "print()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# scikit-learn을 사용하는 다른 방법\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "trainData, validData = train_test_split(housing_df, test_size = 0.40, random_state = 1)\n",
+    "print('Training : ', trainData.shape)\n",
+    "print('Validation : ', validData.shape)\n",
+    "print()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 학습을 위해 행  ID 의 50%를 무작위로 샘플링\n",
+    "trainData = housing_df.sample(frac = 0.5, random_state = 1)\n",
+    "# 행 ID 의 80%를 검증 세트로 샘플링하여 레코드에서만 가져옴\n",
+    "# 50%dml 60%는 30% -> 검증 데이터로 활용\n",
+    "validData = housing_df.drop(trainData.index).sample(frac = 0.6, random_state = 1)\n",
+    "# 나머지 20%를 테스트 데이터로 활용\n",
+    "testData = housing_df.drop(trainData.index).drop(validData.index)\n",
+    "\n",
+    "print('Training : ', trainData.shape)\n",
+    "print('Validation : ', validData.shape)\n",
+    "print('Test : ', testData.shape)\n",
+    "print()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# scikit-learn을 사용하는 다른 방법\n",
+    "trainData, temp = train_test_split(housing_df, test_size = 0.5, random_state= 1)\n",
+    "validData, testData= train_test_split(temp, test_size = 0.4, random_state = 1)\n",
+    "print('Training : ', trainData.shape)\n",
+    "print('Validation : ', validData.shape)\n",
+    "print('Test : ', testData.shape)\n",
+    "print()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 모델 구축 : 선형 회귀 분석을 이용한 예제\n",
+    "#### 모델링 과정\n",
+    "1. 목적 웨스트 록스베리 지역 주택 가격을 예측\n",
+    "2. 데이터셋 획득 2014년 웨스트 록스베리 주택 가격 데이터셋을 이용할 것이며, 전체 데이터의 수가 많지 않아 별도의 표본을 취하지 않았다\n",
+    "3. 데이터 탐색/정제/전처리\n",
+    "4. 데이터 축소\n",
+    "5. 데이터 마이닝 문제 결정\n",
+    "6. 데이터 분할(지도 학습용)\n",
+    "7. 데이터 마이닝 기법 선택"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 8. 알고리즘 사용해 과제 수행\n",
+    "\n",
+    "!pip install data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 학습 데이터 일부에 대한 예측\n",
+    "# 웨스트 록스베리 학습 데이터를 사용해 모델 구축"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
