--- a/dmhw_1.ipynb
+++ b/dmhw_1.ipynb
@@ -177,6 +177,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                           model  price  age_08_04  mfg_month  \\\n0  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13500         23         10   \n1  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13750         23         10   \n2  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13950         24          9   \n3  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  14950         26          7   \n4    TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors  13750         30          3   \n\n   mfg_year     km  hp  met_color  automatic    cc  ...  color_Beige  \\\n0      2002  46986  90          1          0  2000  ...            0   \n1      2002  72937  90          1          0  2000  ...            0   \n2      2002  41711  90          1          0  2000  ...            0   \n3      2002  48000  90          0          0  2000  ...            0   \n4      2002  38500  90          0          0  2000  ...            0   \n\n   color_Black  color_Blue  color_Green  color_Grey  color_Red  color_Silver  \\\n0            0           1            0           0          0             0   \n1            0           0            0           0          0             1   \n2            0           1            0           0          0             0   \n3            1           0            0           0          0             0   \n4            1           0            0           0          0             0   \n\n   color_Violet  color_White  color_Yellow  \n0             0            0             0  \n1             0            0             0  \n2             0            0             0  \n3             0            0             0  \n4             0            0             0  \n\n[5 rows x 49 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model</th>\n      <th>price</th>\n      <th>age_08_04</th>\n      <th>mfg_month</th>\n      <th>mfg_year</th>\n      <th>km</th>\n      <th>hp</th>\n      <th>met_color</th>\n      <th>automatic</th>\n      <th>cc</th>\n      <th>...</th>\n      <th>color_Beige</th>\n      <th>color_Black</th>\n      <th>color_Blue</th>\n      <th>color_Green</th>\n      <th>color_Grey</th>\n      <th>color_Red</th>\n      <th>color_Silver</th>\n      <th>color_Violet</th>\n      <th>color_White</th>\n      <th>color_Yellow</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13500</td>\n      <td>23</td>\n      <td>10</td>\n      <td>2002</td>\n      <td>46986</td>\n      <td>90</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13750</td>\n      <td>23</td>\n      <td>10</td>\n      <td>2002</td>\n      <td>72937</td>\n      <td>90</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13950</td>\n      <td>24</td>\n      <td>9</td>\n      <td>2002</td>\n      <td>41711</td>\n      <td>90</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>14950</td>\n      <td>26</td>\n      <td>7</td>\n      <td>2002</td>\n      <td>48000</td>\n      <td>90</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors</td>\n      <td>13750</td>\n      <td>30</td>\n      <td>3</td>\n      <td>2002</td>\n      <td>38500</td>\n      <td>90</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 49 columns</p>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 더미 변수 만들기\n",
+    "toyota_df = pd.get_dummies(toyota_df, columns = ['fuel_type', 'color'])\n",
+    "toyota_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainData :  (718, 49)\n",
+      "validData :  (431, 49)\n",
+      "testData :  (287, 49)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 학습/검증/시험 데이터 분할 5:3:2\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "trainData, temp = train_test_split(toyota_df, test_size = 0.5, random_state = 1)\n",
+    "validData = toyota_df.drop(trainData.index).sample(frac = 0.6, random_state = 1)\n",
+    "testData = toyota_df.drop(trainData.index).drop(validData.index)\n",
+    "\n",
+    "print('trainData : ', trainData.shape)\n",
+    "print('validData : ', validData.shape)\n",
+    "print('testData : ', testData.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
