add category type

--- a/dmhw_1.ipynb
+++ b/dmhw_1.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
       "text/plain": "                                           model  price  age_08_04  mfg_month  \\\n0  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13500         23         10   \n1  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13750         23         10   \n2  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13950         24          9   \n3  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  14950         26          7   \n4    TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors  13750         30          3   \n\n   mfg_year     km fuel_type  hp  met_color   color  ...  powered_windows  \\\n0      2002  46986    Diesel  90          1    Blue  ...                1   \n1      2002  72937    Diesel  90          1  Silver  ...                0   \n2      2002  41711    Diesel  90          1    Blue  ...                0   \n3      2002  48000    Diesel  90          0   Black  ...                0   \n4      2002  38500    Diesel  90          0   Black  ...                1   \n\n   power_steering  radio  mistlamps  sport_model  backseat_divider  \\\n0               1      0          0            0                 1   \n1               1      0          0            0                 1   \n2               1      0          0            0                 1   \n3               1      0          0            0                 1   \n4               1      0          1            0                 1   \n\n   metallic_rim  radio_cassette  parking_assistant  tow_bar  \n0             0               0                  0        0  \n1             0               0                  0        0  \n2             0               0                  0        0  \n3             0               0                  0        0  \n4             0               0                  0        0  \n\n[5 rows x 38 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model</th>\n      <th>price</th>\n      <th>age_08_04</th>\n      <th>mfg_month</th>\n      <th>mfg_year</th>\n      <th>km</th>\n      <th>fuel_type</th>\n      <th>hp</th>\n      <th>met_color</th>\n      <th>color</th>\n      <th>...</th>\n      <th>powered_windows</th>\n      <th>power_steering</th>\n      <th>radio</th>\n      <th>mistlamps</th>\n      <th>sport_model</th>\n      <th>backseat_divider</th>\n      <th>metallic_rim</th>\n      <th>radio_cassette</th>\n      <th>parking_assistant</th>\n      <th>tow_bar</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13500</td>\n      <td>23</td>\n      <td>10</td>\n      <td>2002</td>\n      <td>46986</td>\n      <td>Diesel</td>\n      <td>90</td>\n      <td>1</td>\n      <td>Blue</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13750</td>\n      <td>23</td>\n      <td>10</td>\n      <td>2002</td>\n      <td>72937</td>\n      <td>Diesel</td>\n      <td>90</td>\n      <td>1</td>\n      <td>Silver</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13950</td>\n      <td>24</td>\n      <td>9</td>\n      <td>2002</td>\n      <td>41711</td>\n      <td>Diesel</td>\n      <td>90</td>\n      <td>1</td>\n      <td>Blue</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>14950</td>\n      <td>26</td>\n      <td>7</td>\n      <td>2002</td>\n      <td>48000</td>\n      <td>Diesel</td>\n      <td>90</td>\n      <td>0</td>\n      <td>Black</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors</td>\n      <td>13750</td>\n      <td>30</td>\n      <td>3</td>\n      <td>2002</td>\n      <td>38500</td>\n      <td>Diesel</td>\n      <td>90</td>\n      <td>0</td>\n      <td>Black</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 38 columns</p>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
@@ -108,13 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['model', 'price', 'age_08_04', 'mfg_month', 'mfg_year', 'km',\n       'fuel_type', 'hp', 'met_color', 'color', 'automatic', 'cc', 'doors',\n       'cylinders', 'gears', 'quarterly_tax', 'weight', 'mfr_guarantee',\n       'bovag_guarantee', 'guarantee_period', 'abs', 'airbag_1', 'airbag_2',\n       'airco', 'automatic_airco', 'boardcomputer', 'cd_player',\n       'central_lock', 'powered_windows', 'power_steering', 'radio',\n       'mistlamps', 'sport_model', 'backseat_divider', 'metallic_rim',\n       'radio_cassette', 'parking_assistant', 'tow_bar'],\n      dtype='object')"
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
       "text/plain": "array(['Diesel', 'Petrol', 'CNG'], dtype=object)"
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,13 +154,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n",
+      "Index(['CNG', 'Diesel', 'Petrol'], dtype='object')\n",
+      "category\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fuel_type 열은 factor 이기 때문에 data type 변경\n",
+    "print(toyota_df.fuel_type.dtype)\n",
+    "toyota_df.fuel_type = toyota_df.fuel_type.astype('category')\n",
+    "print(toyota_df.fuel_type.cat.categories)\n",
+    "print(toyota_df.fuel_type.dtype)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
       "text/plain": "array(['Blue', 'Silver', 'Black', 'White', 'Grey', 'Red', 'Green',\n       'Yellow', 'Violet', 'Beige'], dtype=object)"
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,14 +205,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n",
+      "Index(['Beige', 'Black', 'Blue', 'Green', 'Grey', 'Red', 'Silver', 'Violet',\n",
+      "       'White', 'Yellow'],\n",
+      "      dtype='object')\n",
+      "category\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(toyota_df.color.dtype)\n",
+    "toyota_df.color = toyota_df.color.astype('category')\n",
+    "print(toyota_df.color.cat.categories)\n",
+    "print(toyota_df.color.dtype)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "outputs": [
     {
      "data": {
       "text/plain": "                                           model  price  age_08_04  mfg_month  \\\n0  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13500         23         10   \n1  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13750         23         10   \n2  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13950         24          9   \n3  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  14950         26          7   \n4    TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors  13750         30          3   \n\n   mfg_year     km  hp  met_color  automatic    cc  ...  color_Beige  \\\n0      2002  46986  90          1          0  2000  ...            0   \n1      2002  72937  90          1          0  2000  ...            0   \n2      2002  41711  90          1          0  2000  ...            0   \n3      2002  48000  90          0          0  2000  ...            0   \n4      2002  38500  90          0          0  2000  ...            0   \n\n   color_Black  color_Blue  color_Green  color_Grey  color_Red  color_Silver  \\\n0            0           1            0           0          0             0   \n1            0           0            0           0          0             1   \n2            0           1            0           0          0             0   \n3            1           0            0           0          0             0   \n4            1           0            0           0          0             0   \n\n   color_Violet  color_White  color_Yellow  \n0             0            0             0  \n1             0            0             0  \n2             0            0             0  \n3             0            0             0  \n4             0            0             0  \n\n[5 rows x 49 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model</th>\n      <th>price</th>\n      <th>age_08_04</th>\n      <th>mfg_month</th>\n      <th>mfg_year</th>\n      <th>km</th>\n      <th>hp</th>\n      <th>met_color</th>\n      <th>automatic</th>\n      <th>cc</th>\n      <th>...</th>\n      <th>color_Beige</th>\n      <th>color_Black</th>\n      <th>color_Blue</th>\n      <th>color_Green</th>\n      <th>color_Grey</th>\n      <th>color_Red</th>\n      <th>color_Silver</th>\n      <th>color_Violet</th>\n      <th>color_White</th>\n      <th>color_Yellow</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13500</td>\n      <td>23</td>\n      <td>10</td>\n      <td>2002</td>\n      <td>46986</td>\n      <td>90</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13750</td>\n      <td>23</td>\n      <td>10</td>\n      <td>2002</td>\n      <td>72937</td>\n      <td>90</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>13950</td>\n      <td>24</td>\n      <td>9</td>\n      <td>2002</td>\n      <td>41711</td>\n      <td>90</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n      <td>14950</td>\n      <td>26</td>\n      <td>7</td>\n      <td>2002</td>\n      <td>48000</td>\n      <td>90</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors</td>\n      <td>13750</td>\n      <td>30</td>\n      <td>3</td>\n      <td>2002</td>\n      <td>38500</td>\n      <td>90</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2000</td>\n      <td>...</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 49 columns</p>\n</div>"
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stdout",
