--- a/dm_class_02.ipynb
+++ b/dm_class_02.ipynb
@@ -254,6 +254,390 @@
     "plt.ylabel('Principal Component 2')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dd9cb7a",
+   "metadata": {},
+   "source": [
+    "## 성능 평가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "384a9c29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dmba\n",
+      "  Downloading dmba-0.1.0-py3-none-any.whl (11.8 MB)\n",
+      "     --------------------------------------- 11.8/11.8 MB 10.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: dmba\n",
+      "Successfully installed dmba-0.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
+    "import matplotlib.pylab as plt\n",
+    "!pip install dmba\n",
+    "from dmba import regressionSummary, classificationSummary\n",
+    "from dmba import liftChart, gainsChart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb70d75b",
+   "metadata": {},
+   "source": [
+    "### 예측 성능 평가\n",
+    "* 검증 데이터를 기반으로 모든 케이스에 대해 예측 정확도를 평가해 학습 데이터보다 좀 더 객관적인 근거 제공\n",
+    "\n",
+    "### 지도 학습에서 관심 결과\n",
+    "* 수치 값 : 결과 변수가 수치형일 때(주택 가격)\n",
+    "* 클래스 소속도 : 결과 변수가 범주형일 때(구매자/비구매자)\n",
+    "* 경향 : 결과 변수가 범주형일 떄(채무 불이행 경향) 클래스 소속도의 확률"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14346ad7",
+   "metadata": {},
+   "source": [
+    "### 예측 정확성 판단 척도\n",
+    "* MAE(평균 절대 오차/편차) = 평균 절대 오차의 규모\n",
+    "* 평균 오차 = = 오차의 부호를 유지한다는 점을 제외하면 MAE와 유사해, 음의 오차가 동일한 규모의 양의 오차를 상쇄한다. 따라서 이 값은 예측이 평균적으로 결과 변수의 예측을 넘어서는지 미달되는지를 나타낸다.\n",
+    "* MPE(평균 백분율 오차) = 방향을 고려해 예측이 실제값에서 평균적으로 얼마나 벗어나는지에 대한 백분율 점수를 알려준다.\n",
+    "* MAPE(평균 절대 백분율 오차) = 실제값에서 평균적으로 얼마나 벗어나는지에 대한 백분율 점수를 알려준다.\n",
+    "* RMSE(근의 평균 제곱 오차) = 학습 데이터 대신 검증 데이터로 계산된 것만 빼면 선형 회귀 분석에서 추정값의 표준 오차와 유사하다. 결과 변수와 단위가 같다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00a981f5",
+   "metadata": {},
+   "source": [
+    "### 모델의 정확성 척도"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "335f617a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>price</th>\n",
+       "      <th>age_08_04</th>\n",
+       "      <th>mfg_month</th>\n",
+       "      <th>mfg_year</th>\n",
+       "      <th>km</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>met_color</th>\n",
+       "      <th>color</th>\n",
+       "      <th>...</th>\n",
+       "      <th>powered_windows</th>\n",
+       "      <th>power_steering</th>\n",
+       "      <th>radio</th>\n",
+       "      <th>mistlamps</th>\n",
+       "      <th>sport_model</th>\n",
+       "      <th>backseat_divider</th>\n",
+       "      <th>metallic_rim</th>\n",
+       "      <th>radio_cassette</th>\n",
+       "      <th>parking_assistant</th>\n",
+       "      <th>tow_bar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n",
+       "      <td>13500</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>46986</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n",
+       "      <td>13750</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>72937</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n",
+       "      <td>13950</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>41711</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors</td>\n",
+       "      <td>14950</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>48000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors</td>\n",
+       "      <td>13750</td>\n",
+       "      <td>30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>38500</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           model  price  age_08_04  mfg_month  \\\n",
+       "0  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13500         23         10   \n",
+       "1  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13750         23         10   \n",
+       "2  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  13950         24          9   \n",
+       "3  TOYOTA Corolla 2.0 D4D HATCHB TERRA 2/3-Doors  14950         26          7   \n",
+       "4    TOYOTA Corolla 2.0 D4D HATCHB SOL 2/3-Doors  13750         30          3   \n",
+       "\n",
+       "   mfg_year     km fuel_type  hp  met_color   color  ...  powered_windows  \\\n",
+       "0      2002  46986    Diesel  90          1    Blue  ...                1   \n",
+       "1      2002  72937    Diesel  90          1  Silver  ...                0   \n",
+       "2      2002  41711    Diesel  90          1    Blue  ...                0   \n",
+       "3      2002  48000    Diesel  90          0   Black  ...                0   \n",
+       "4      2002  38500    Diesel  90          0   Black  ...                1   \n",
+       "\n",
+       "   power_steering  radio  mistlamps  sport_model  backseat_divider  \\\n",
+       "0               1      0          0            0                 1   \n",
+       "1               1      0          0            0                 1   \n",
+       "2               1      0          0            0                 1   \n",
+       "3               1      0          0            0                 1   \n",
+       "4               1      0          1            0                 1   \n",
+       "\n",
+       "   metallic_rim  radio_cassette  parking_assistant  tow_bar  \n",
+       "0             0               0                  0        0  \n",
+       "1             0               0                  0        0  \n",
+       "2             0               0                  0        0  \n",
+       "3             0               0                  0        0  \n",
+       "4             0               0                  0        0  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 도요타 자동차 가격에 대한 모델의 예측 오차 척도. 학습과 검증\n",
+    "# 정확한 척도를 위한 파이썬 코드\n",
+    "\n",
+    "# 데이터 프레임을 로드하고 회귀 분석을 위해 열을 선택\n",
+    "car_df = pd.read_csv('https://raw.githubusercontent.com/reisanar/datasets/master/ToyotaCorolla.csv')\n",
+    "car_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4a17c2c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 출력 변수와 텍스트 열을 제거하여 예측 변수 목록을 만듦\n",
+    "excludeColumns = ('price', 'id', 'model', 'fuel_type', 'color')\n",
+    "predictors = [s for s in car_df.columns if s not in excludeColumns]\n",
+    "outcome = 'price'\n",
+    "\n",
+    "# 데이터 분할\n",
+    "X = car_df[predictors]\n",
+    "y = car_df[outcome]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc775057",
+   "metadata": {},
+   "source": [
+    "### 학습과 검증 성능의 비교\n",
+    "* 학습 데이터셋에서 오차는 모델이 얼마나 잘 적합되었는지 알려줌\n",
+    "* 반면, 검증 데이터셋에서 오차(예측 오차)는 모델이 새로운 데이터를 예측하는 성능(예측 성능)을 측정\n",
+    "* 모델은 학습 데이터셋을 사용해 적합되었기 때무에 학습 오차가 검증 오차보다 작고, 복잡한 모델일수록 학습 데이터에 과적합될 가능성이 더 큼"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0d552a65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 학습 데이터 셋과 검증 데이터 셋에 대한 도요타 가격 예측 오차의 히스토그램과 박스 플롯"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b56c4ec",
+   "metadata": {},
+   "source": [
+    "### 누적 이득과 리프트 차트\n",
+    "* 모델의 예측 성능을 예측 변수들을 사용하지 않는 기준 모델과 비교\n",
+    "* 새로운 레코드에서 단지 누적 예측 값이 가장 큰 레코드들의 부분집합을 찾을 때 예측 성능을 시각적으로 측정하는 방법\n",
+    "* 예측값이 높은 값부터 낮은 값으로 정렬된 관심 레코드드의 실제 값들을 누적시키고 누적된 레코드의 수(x-축 값)에 대한 함수로 y-축에 그 누적 값(=이득)을 그리는 것이 누적 이득 차트(곡선)\n",
+    "* 누적 이득 차트가 벤치마크대각선에서 멀리 떨어질수록 모델이 높은 결과 값의 레코드들과 낮은 결과 값의 레코드들을 더 잘 분리함\n",
+    "* 같은 정보가 십분위 리프트 차트에서도 나올 수 있는데, 이 차트는 정렬된 레코드들을 10개의 십분위로 그룹화하고 각 십분위에 대해 나이브 벤치마크 이득에 대하 모델의 이득 비(리프트라고 불림)를 보여줌"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f7c252d",
+   "metadata": {},
+   "source": [
+    "### 분류기 성능의 판단\n",
+    "#### 나이브 규칙\n",
+    "* 예측 변수가 가지는 모든 정보(x1, x2, ... xp)를 무시하고 주어진 레코드를 m개 클래스 중 하나로 분류하는 규칙\n",
+    "* 해당 레코드를 다수 클래스의 멤버로 분류\n",
+    "* 종종 벤치마크로 사용됨\n",
+    "* 분류를 위한 나이브 규칙은 추가적인 예측 변수 정보는 배제하고 y정보에만 의존\n",
+    "\n",
+    "#### 클래스 분리\n",
+    "* 클래스들이 예측 변수 정보로 잘 분리? -> 작은 데이터셋으로도 충분히 좋은 분류기\n",
+    "* 고수준 분리는 예측 변수를 사용해 오류가 낮음을 의미\n",
+    "* 저수준 분리는 나이브 규칙서 크게 개선되지 않음을 의미\n",
+    "\n",
+    "#### 정오 행렬(Confusion matrix)\n",
+    "* 특정 데이터셋에 대해 산출하는 정확한 분류와 부정확한 분류를 요약\n",
+    "* 정오 행렬의 행과 열을 각각 예측 클래스와 진(실제)클래스에 대응"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43e708b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e4b38d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
